manifests/kiali/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: kiali
  name: kiali
  namespace: ${namespace}
spec:
  gateways:
  - ${gateway}
  hosts:
  %{~ for host in kiali_hostnames ~}
  - "${host}"
  %{~ endfor ~}
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        host: ${kiali_destination}
        port:
          number: 20001
